using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class animatorStrings
{
    // PLAYER STRINGS
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string onGround = "onGround";
    internal static string yvelocity = "yvelocity";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
    internal static string dash = "dash";
    internal static string isDashing = "isDashing";
    internal static string isAlive = "isAlive";

    // BOSS 1 STRINGS
    internal static string backOff = "backOff";
    internal static string flowerStart = "flowerStart";
    internal static string flashStart = "flashStart";
    internal static string flashBomb = "flashBomb";

    // BOSS UGT STRINGS
    //internal static string 
    internal static string agroRange = "agroRange";
    internal static string agroTrigger = "agroTrigger";
    internal static string meleeHit = "meleeHit";
    internal static string meleeRange = "meleeRange";
    internal static string followUp = "followUp";
    internal static string summon = "summon";
}
